--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "historical_dates_module",
+  "homepage": "https://Mayariff.github.io/historical_dates",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "gsap": "^3.11.1",
     "node-sass-install": "^1.0.2",
     "react": "^18.2.0",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
