--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,14 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "esnext",
+     "jsx": "react-jsx",
+    "moduleResolution": "node"
   },
   "include": [
     "src"
